kube-config/postgres.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template: # same as in pods metadata,
    metadata:
      labels:
        components: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: '500Mi'
              cpu: '300m'
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    components: postgres
